# moxcore

./: .gitignore  Cargo.toml  LICENSE-Apache-2.0  LICENSE-MIT  README.md  pyproject.toml
mox-compiler/: pyproject.toml  test.py
mox-compiler/mox/: __init__.py  conditions.py  data_types.py  effects.py  keywords.py  normalize.py  parser.py  target.py  utils.py
mox_compiler/: Cargo.toml  dune-project  mox_compiler.opam
mox_compiler/src/: combinators.rs  dune  main.rs  parsers.rs
mox_compiler/test/: dune
mox_compiler_py/: hello.py  pyproject.toml  test.py
mox_compiler_py/mox/: ability.py  data_types.py  parser.py
mox_compiler_py/parsing/: combinators.py  keywords.py  lexing.py
moxc/: pyproject.toml  test.py
moxc/mox/: __init__.py  ability.py  conditions.py  cost.py  data_types.py  effects.py  keywords.py  normalize.py  parser.py  target.py  utils.py
moxcore.com/: bun.lockb  package.json  prebuild.ts  rsbuild.config.ts
moxcore.com/src/: index.tsx
moxzf/: Cargo.toml
moxzf/src/: lib.rs  main.rs
scripts/: find-todo-and-fixme.sh  gzip.sh
scrycache/: Cargo.toml
scrycache/src/: card.rs  lib.rs
similarity/: hello.py  main.py  pipeline.py  pyproject.toml  test.py
similarity/cards/: ann.py  cache.py  card.py  embedding.py  process_dump.py  process_scryfall_dump.py  search.py  utils.py
similarity/search/: bm25.py  embed.py  mox.py  rerank.py  utils.py
web-ui/: README.md  build.ts  bun.lockb  package.json  tsconfig.json
web-ui/src/: index.tsx
www/: bun.lockb  package.json  rsbuild.config.ts  tsconfig.json
www/src/: index.tsx
(+54 files in other folders)
